Update LOVAGWAS package: fix imports, add documentation, update data

--- a/README.Rmd
+++ b/README.Rmd
@@ -31,82 +31,127 @@ pak::pak("lamessad/LOVAGWAS")
 
 ## Preparing Input Data
 Before applying **`LOVAGWAS`**, all GWAS summary statistics (exposures and outcome) must be:
-**1. Harmonized to the same reference panel (e.g., 1000 Genomes EUR).
-**2. Restricted to common SNPs across all datasets.
+
+**1. Harmonized to the same reference panel (e.g., 1000 Genomes EUR)**,
+
+**2. Restricted to common SNPs across all datasets.**
+
 Step 1. Harmonize each summary statistics
 
 ``` r
+### -----------------------------------------
 # # Clear workspace
+### -----------------------------------------
 # rm(list = ls())
+### -----------------------------------------
+#
+### -----------------------------------------
 # # 1. Read GWAS summary data
+### -----------------------------------------
 # data <- read.table("bmi_summary.txt", header = TRUE)
+#
+### -----------------------------------------
 # # 2. Read reference panel (1000G EUR BIM file)
+### -----------------------------------------
 # bim <- read.table("/data/alh-admlda/reference/EUR.bim", header = FALSE)
 # colnames(bim) <- c("CHR","SNP","cM","BP","A1","A2")
+#
+### -----------------------------------------
 # # 3. Standardize GWAS column names
+### -----------------------------------------
 # colnames(data) <- c("CHR","BP","SNP","A1","A2","b","se","lp","N","AF")
+#
+### -----------------------------------------
 # # 4. Keep SNPs present in both GWAS and reference
+### -----------------------------------------
 # commonsnps <- intersect(bim$SNP, data$SNP)
 # data <- data[match(commonsnps, data$SNP), ]
 # bim  <- bim[match(commonsnps, bim$SNP), ]
-# 
+#
+### -----------------------------------------
 # # 5. Check allele alignment
+### -----------------------------------------
 # allele_ind <- (data$A1 == bim$A1 & data$A2 == bim$A2) |
 #               (data$A2 == bim$A1 & data$A1 == bim$A2)
 # data <- data[allele_ind, ]
 # bim  <- bim[allele_ind, ]
-# 
+#
+### -----------------------------------------
 # # 6. Align effect alleles to reference
+### -----------------------------------------
 # flip <- data$A1 == bim$A2
 # data$b[flip] <- -data$b[flip]
 # data$A1 <- bim$A1
 # data$A2 <- bim$A2
 # 
+### -----------------------------------------
 # # 7. Save harmonized file
 # write.table(data, file = "bmi_harmonized.txt", quote = FALSE, -->
 #             sep = "\t", row.names = FALSE)
+
 ```
 Repeat these steps for all exposures and the outcome
 
-Step 2. Find common SNPs across all harmonized summary statistics
+Step 2 – Extract and align SNP effect Sizes across GWAS
 
 ```r
+# ## -----------------------------------------
+# ## Files
+# ## -----------------------------------------
 # #Exposure
-# betaX_files <- c("tg_harmonized.txt", "ldl_harmonized.txt", 
+# betaX_files <- c("tg_harmonized.txt", "ldl_harmonized.txt",
 #                  "hdl_harmonized.txt", "bmi_harmonized.txt",
 #                  "ht_harmonized.txt", "fg_harmonized.txt",
 #                  "sbp_harmonized.txt", "dbp_harmonized.txt")
-# 
-# # Outcome 
+# # Outcome
 # betaY_file <- "cad_harmonized.txt"
 # 
-# # Read all harmonized files
-# all_files <- c(betaX_files, betaY_file)
-# gwas_list <- lapply(all_files, function(f) read.table(f, header = TRUE))
-# # Identify common SNPs
-# common_snps <- Reduce(intersect, lapply(gwas_list, function(df) df$SNP))
-# cat("Number of common SNPs:", length(common_snps), "\n")
-# # Subset each dataset to common SNPs (same order)
-# gwas_list <- lapply(gwas_list, function(df) {
-#   df[match(common_snps, df$SNP), ]
-# })
+# ## -----------------------------------------
+# ## Outcome (CAD): keep CAD SNP order
+# ## -----------------------------------------
+# cad <- read.table(betaY_file, header = TRUE, stringsAsFactors = FALSE)
+# cad$SNP <- as.character(cad$SNP)
+# 
+# betaY   <- cad[, c("SNP", "b", "se")]
+# ## -----------------------------------------
+# ## Exposures: fill by CAD order (no merges)
+# ## -----------------------------------------
+# betaX   <- data.frame(SNP = cad$SNP, stringsAsFactors = FALSE)
+# 
+# for (f in betaX_files) {
+#   gwas <- read.table(f, header = TRUE, stringsAsFactors = FALSE)
+#   gwas$SNP <- as.character(gwas$SNP)
+#   
+#   ## (optional) drop duplicate SNPs if present (keeps first)
+#   if (any(duplicated(gwas$SNP))) gwas <- gwas[!duplicated(gwas$SNP), ]
+#   
+#   exposure <- sub("_harmonized\\.txt$", "", basename(f))
+#   
+#   m <- match(betaX$SNP, gwas$SNP)  # indices in GWAS rows that match CAD order
+#   
+#   betaX[[paste0("beta_", exposure)]] <- gwas$b[m]
+#   
+# }
+
 
 ```
-Step 3. Extract inputs based on common SNps
+Step 3. Apply LOVA-GWAS adjustment
+
 
 ```r
-# #Outcome (CAD)
-# cad <- gwas_list[[length(gwas_list)]]
-# betaY   <- cad$b
-# betaYse <- cad$se
+# tau_t <- c(0.1, 0.2)  # causal estimates from MVMR-LOVA or prior MR step
+# ny <- 547261            # outcome GWAS sample size
+# tau_t <- c(0.01, 0.24, -0.34, 0.26, -0.08, 0.35, 0.02, 0.03)
+# res_lova <- lova_gwas(
+#   gwasY = gwasY,
+#   betaX = betaX,
+#   tau_t = tau_t,
+#   ny = ny,
+#   plot_manhattan = TRUE,
+#   save_path = "plots/lova_manhattan.png"
+# )
 # 
-# # Exposures
-# betaX   <- do.call(cbind, lapply(gwas_list[1:length(betaX_files)], function(df) df$b))
-# betaXse <- do.call(cbind, lapply(gwas_list[1:length(betaX_files)], function(df) df$se))
-# 
-# # SNP info (aligned)
-# snp_info <- cad[, c("SNP","CHR","BP","A1","A2")]
-
+# head(res_lova)
 ```
 ## Example
 
@@ -116,23 +161,17 @@ Here is an example demonstrating how to apply LOVAGWAS methods to estimate direc
 ```{r example}
 library(LOVAGWAS)
 ## load the example data created by simulation 
+data(gwasY)
+gwasY=as.data.frame(gwasY)
 data(betaX)
-data(betaXse)
-data(betaY)
-data(betaYse)
-data(snp_info)
-dim(betaX)      
-dim(betaXse)    
-length(betaY)   
-length(betaYse) 
-head(snp_info) 
+head(gwasY) 
+head(betaX) 
 res <- lova_gwas(
-    betaY = betaY,
+    gwasY = gwasY,
     betaX = betaX,
     betaYse = betaYse,
-    tau_t = c(0.30, -0.10, 0.03),  # example causal estimates
+    tau_t = c(0.1, 0.2),  # example causal estimates
     ny = 50000, #outcome GWAS sample size
-    snp_info = snp_info,
     plot_manhattan = TRUE
   )
   head(res)
